[package]
name = "echo-probe"
version = "0.1.0"
authors = ["Nick Cardin <nick@cardin.email>"]
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = {version = "1.3", path = "../../redbpf/redbpf-macros", optional = true }
redbpf-probes = {version = "1.3", path = "../../redbpf/redbpf-probes", optional = true }

[features]
default = []
probes = ["redbpf-probes", "redbpf-macros"]

[[bin]]
name = "echo"
path = "src/probe.rs"
required-features = ["probes"]
