[package]
name = "echo"
version = "0.1.0"
authors = ["Nick Cardin <nick@cardin.email>"]
edition = "2018"

[[bin]]
name = "echo-naive"
path = "src/main_naive.rs" 


[[bin]]
name = "echo-ebpf"
path = "src/main_ebpf.rs"

[build-dependencies]
cargo-bpf = { version = "1.3", path = "../../redbpf/cargo-bpf", default-features = false, features = ["build"] }

[dependencies]
echo-probe = { path = "../echo-probe" }
redbpf = {version = "1.3", path = "../../redbpf/redbpf", features = ["load"] }
glommio = "0.4.1"
futures-lite = "1.11.1"