[package]
name = "proxy-probe"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = {version = "1.3", path = "../../redbpf/redbpf-macros", optional = true }
redbpf-probes = {version = "1.3", path = "../../redbpf/redbpf-probes", optional = true }

[features]
default = []
probes = ["redbpf-probes", "redbpf-macros"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "sockmap"
path = "src/probe.rs"
required-features = ["probes"]
