[package]
name = "proxy"
version = "0.1.0"
authors = ["Nick Cardin <nick@cardin.email>"]
edition = "2018"

[build-dependencies]
cargo-bpf = { version = "1.3", path = "../../redbpf/cargo-bpf", default-features = false, features = ["build"] }

[dependencies]
proxy-probe = { path = "../proxy-probe" }
redbpf = {version = "1.3", path = "../../redbpf/redbpf", features = ["load"] }
bpf-sys = {version = "1.3", path = "../../redbpf/bpf-sys"}
glommio = { git = "https://github.com/DataDog/glommio.git" }
futures-lite = "1.11.1"
# libc = "0.2.82"
